--- a/style.css
+++ b/style.css
@@ -64,3 +64,17 @@ p {
     font-size: 20px;
     font-family: sans-serif;
 }
+
+@media (max-width: 600px) {
+    .container {
+        width: 100%;
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 70px;
+        background-color: rgb(91, 89, 92);
+        border-radius: 20px;
+    }
+    
+  }
